--- a/config/templates/Manifest/assets/locales/en-US/translations.json
+++ b/config/templates/Manifest/assets/locales/en-US/translations.json
@@ -1,25 +1,15 @@
 {
-    "Workload_Display_Name": "WDKv2 Sample Workload",
-    "Workload_Full_Display_Name": "WDKv2 Sample Workload",
-    "Workload_Description": "WDKv2 Sample Workload with two item types and playgrounds to get your dev experience started 🚀",
-    "Learning_Material_1_Title": "Workload development kit documentation",
-    "Learning_Material_1_Description": "Workload development kit documentation description",
-    "Learning_Material_1_Introduction": "Get started with Workload Development Kit",
-    "Frontend_playground_Title": "Client SDK playground",
-    "Frontend_playground_Description": "Client SDK playground description",
-    "Frontend_playground_Introduction": "Get started with Client SDK playground",
-    "Data_playground_Title": "Data playground",
-    "Data_playground_Description": "Data playground description",
-    "Data_playground_Introduction": "Get started with Data playground",
-    "Fabric_UX_System_Title": "Fabric UX system documentation",
-    "Fabric_UX_System_Description": "Fabric UX system description",
-    "Fabric_UX_System_Introduction": "Get started with Fabric UX system",
-    "Workload_Hub_Workload_Slogan": "The quickest way from a billion points of data to a point of view.",
-    "Workload_Hub_Workload_Description": "Contoso workload enables organizations to conduct real-time customer interactions and automate operational business decisions at scale. It supports a wide variety of customer-facing activities such as personalized marketing and next best action, and customer-impacting decisions including credit services and fraud prevention.",
-    "HelloWorldItem_DisplayName": "Hello World",
-    "HelloWorldItem_DisplayName_Plural": "Hello Worlds",
-    "HelloWorldItem_Description": "A Hello World Item to start your Dev Experience",
-    "CalculatorSampleItem_DisplayName": "Calculator Sample",
-    "CalculatorSampleItem_DisplayName_Plural": "Calculator Samples",
-    "CalculatorSampleItem_Description": "A Simple Calculator Item that stores data in OneLake"
+    "Workload_Display_Name": "Fabric Tools",
+    "Workload_Full_Display_Name": "Fabric Tools",
+    "Workload_Description": "Fabric Tools with two item types and playgrounds to get your dev experience started 🚀",
+    "FabricTools_Docs_Title": "Fabric Tools documentation",
+    "FabricTools_Docs_Description": "Fabric Tools documentation description",
+    "FabricTools_Docs_Introduction": "Get started with Fabric Tools",
+    "Workload_Hub_Workload_Slogan": "Tools that make working with Fabric a breeze.",
+    "Workload_Hub_Workload_Description": "Fabric tools enable developers to create and manage Fabric workspaces with ease. It supports various tasks such as package installation, workspace management, and more.",
+    "PackageInstallerItem_DisplayName": "Package Installer",
+    "PackageInstallerItem_DisplayName_Plural": "Package Installers",
+    "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces."
 }
+
+
