--- a/config/templates/Manifest/assets/locales/en-US/translations.json
+++ b/config/templates/Manifest/assets/locales/en-US/translations.json
@@ -9,7 +9,10 @@
     "Workload_Hub_Workload_Description": "Fabric tools enable developers to create and manage Fabric workspaces with ease. It supports various tasks such as package installation, workspace management, and more.",
     "PackageInstallerItem_DisplayName": "Package Installer",
     "PackageInstallerItem_DisplayName_Plural": "Package Installers",
-    "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces."
+    "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces.",
+    "FileEditorItem_DisplayName": "File Editor Item",
+    "FileEditorItem_DisplayName_Plural": "File Editor Items",
+    "FileEditorItem_Description": "A item that provides a File Editor-like editing experience."
 }
 
 
