--- a/config/templates/Manifest/assets/locales/en-US/translations.json
+++ b/config/templates/Manifest/assets/locales/en-US/translations.json
@@ -10,9 +10,9 @@
     "PackageInstallerItem_DisplayName": "Package Installer",
     "PackageInstallerItem_DisplayName_Plural": "Package Installers",
     "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces.",
-    "FileEditorItem_DisplayName": "File Editor Item",
-    "FileEditorItem_DisplayName_Plural": "File Editor Items",
-    "FileEditorItem_Description": "A item that provides a File Editor-like editing experience."
+    "OneLakeExplorerItem_DisplayName": "OneLake Explorer",
+    "OneLakeExplorerItem_DisplayName_Plural": "OneLake Explorers",
+    "OneLakeExplorerItem_Description": "An item that provides OneLake file exploration and editing capabilities."
 }
 
 
