--- a/Workload/Manifest/assets/locales/en-US/translations.json
+++ b/Workload/Manifest/assets/locales/en-US/translations.json
@@ -12,7 +12,11 @@
     "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces.",
     "OneLakeExplorerItem_DisplayName": "OneLake Explorer",
     "OneLakeExplorerItem_DisplayName_Plural": "OneLake Explorers",
-    "OneLakeExplorerItem_Description": "An item that provides OneLake file exploration and editing capabilities."
+    "OneLakeExplorerItem_Description": "An item that provides OneLake file exploration and editing capabilities.",
+    "IcebergCatalogItem_DisplayName": "Iceberg Catalog",
+    "IcebergCatalogItem_DisplayName_Plural": "Iceberg Catalogs",
+    "IcebergCatalogItem_Description": "An Iceberg Catalog Item that creates shortcuts to Iceberg tables in OneLake"
+
 }
 
 
