--- a/Workload/Manifest/assets/locales/es/translations.json
+++ b/Workload/Manifest/assets/locales/es/translations.json
@@ -13,7 +13,7 @@
   "OneLakeExplorerItem_DisplayName": "Explorador de OneLake",
   "OneLakeExplorerItem_DisplayName_Plural": "Exploradores de OneLake",
   "OneLakeExplorerItem_Description": "Un elemento que proporciona capacidades de exploración y edición de archivos OneLake.",
-  "DataSharingItem_DisplayName": "Compartición de Datos",
-  "DataSharingItem_DisplayName_Plural": "Comparticiones de Datos",
-  "DataSharingItem_Description": "Un elemento que proporciona capacidades de compartición de datos."
+  "ExternalDataShareItem_DisplayName": "Compartición de Datos Externos",
+  "ExternalDataShareItem_DisplayName_Plural": "Comparticiones de Datos Externos",
+  "ExternalDataShareItem_Description": "Un elemento que proporciona capacidades de compartición de datos externos."
 }
