--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -19,7 +19,6 @@
     "HelloWorldItemEditor_Definition_Message_Label": "Item Definition",
     "HelloWorldItemEditor_LoadingProgressBar_Text": "Loading Hello World item ...",
     "HelloWorldItemEditorEmpty_Message": "Let's say hello to {{itemName}}!",
-    "HelloWorldItemEditorEmpty_Button": "Save item",
-    "DataSharingItemEditor_Title": "Data Sharing Item Editor"
+    "HelloWorldItemEditorEmpty_Button": "Save item"
 }
   
