--- a/Workload/Manifest/assets/locales/en-US/translations.json
+++ b/Workload/Manifest/assets/locales/en-US/translations.json
@@ -8,7 +8,7 @@
     "HelloWorldItem_DisplayName_Plural": "Hello Worlds",
     "HelloWorldItem_Description": "A Hello World Item to start your Dev Experience",
     "HelloWorld_GetStarted_1_Title": "Title1",
-    "HelloWorld_GetStarted_2_Title": "Title2",
+    "HelloWorld_GetStarted_2_Title": "Title2 - Client SDK Playground",
     "HelloWorld_GetStarted_3_Title": "Title3",
     "HelloWorld_GetStarted_1_Sub_Title": "SubTitle1",
     "HelloWorld_GetStarted_2_Sub_Title": "SubTitle2",
