updated styles handling

--- a/docs/ReleaseNotes/2025/v2025.11.md
+++ b/docs/ReleaseNotes/2025/v2025.11.md
@@ -62,7 +62,7 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 - **Editor-Specific Stylesheets**: Each item editor should have its own `.scss` file for editor-specific styling
 - **Global Fabric Styles**: Keep global stylesheets clean with only Fabric platform styles and design tokens
 - **Clear Separation**: Avoid mixing editor-specific customizations with global Fabric styling patterns
-- **Modular Organization**: Editor styles in dedicated files (e.g., `HelloWorldItemEditor.scss`) while keeping `styles.scss` for global patterns
+- **Modular Organization**: Editor styles in dedicated files (e.g., `HelloWorldItemEditor.scss`) 
 - **Maintenance Benefits**: Easier to update global Fabric styles without breaking editor-specific customizations
 
 ### Development Workflow
@@ -133,8 +133,7 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 @import './styles.scss';
 
 // New modular imports
-@import './styles/fabric-defaults.scss';
-@import './styles/components.scss';
+@import './HelloWorldItem.scss';
 ```
 
 ## 🚨 Known Issues
@@ -162,8 +161,6 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
    - Review and update Fluent UI component imports to v9 versions
    - Replace custom implementations with standardized base controls where applicable
    - **SCSS Organization**: Create editor-specific `.scss` files (e.g., `MyItemEditor.scss`) for editor customizations
-   - **Keep Global Clean**: Maintain global `styles.scss` for Fabric platform styles only
-   - Update any custom styling to work with new CSS architecture
 
 4. **Test Script Execution**
    - Verify DevGateway scripts run correctly with `npm run start:devGateway`
