--- a/docs/ReleaseNotes/2025/v2025.11.md
+++ b/docs/ReleaseNotes/2025/v2025.11.md
@@ -141,6 +141,7 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 - **Detail View Patterns**: Best practices for consistent detail views
 - **Empty State Guidelines**: Implementing proper empty states with onboarding
 - **JSDoc Reference System**: Added comprehensive documentation links to all main control components for quick navigation from code to docs
+- **Documentation Reorganization**: Moved HelloWorldItem documentation under `/docs/items/` for better organization
 - CSS organization and theming documentation
 - Data playground user guide
 - Component migration examples
