Replaced Controllers key word with Components - updated docs, folder names, imports

--- a/docs/ReleaseNotes/2025/v2025.11.md
+++ b/docs/ReleaseNotes/2025/v2025.11.md
@@ -2,30 +2,30 @@
 
 ## Overview
 
-This release introduces significant improvements to the Microsoft Fabric Extensibility Toolkit with standardized controls, enhanced UI consistency, and important script fixes. This update focuses on improving the developer experience with better default components and resolving critical issues.
+This release introduces significant improvements to the Microsoft Fabric Extensibility Toolkit with standardized components, enhanced UI consistency, and important script fixes. This update focuses on improving the developer experience with better default components and resolving critical issues.
 
 ## 🚀 New Features
 
-### New Standardized Base Controls
+### New Standardized Base Components
 
 - **Base Editor Component**: New standardized editor foundation for all workload item editors
 - **Detail View Component**: Consistent detail view pattern with proper styling and layout
 - **Empty View Component**: Standardized empty state component with onboarding guidance
 - **Ribbon Components**: Complete ribbon system with standardized actions and styling
-- **Navigation Controls**: Consistent navigation patterns and breadcrumb components
-- **Form Controls**: Standardized form elements with proper validation and styling
+- **Navigation Components**: Consistent navigation patterns and breadcrumb components
+- **Form Components**: Standardized form elements with proper validation and styling
 
-### Enhanced Control Architecture
+### Enhanced Component Architecture
 
 - Introduced comprehensive base control library that developers should use as foundations
-- All controls follow Fluent UI v9 design principles with Fabric-specific customizations
+- All components follow Fluent UI v9 design principles with Fabric-specific customizations
 - Consistent styling, theming, and accessibility built into all base components
-- Proper responsive design patterns implemented across all controls
+- Proper responsive design patterns implemented across all components
 - **JSDoc Documentation References**: Added comprehensive @see references to all main control classes linking to architecture docs, integration guides, and Fluent UI documentation
 
 ### HelloWorld Item Modernization
 
-- **Updated HelloWorld Implementation**: Migrated HelloWorld item to use new base controls as reference implementation
+- **Updated HelloWorld Implementation**: Migrated HelloWorld item to use new base components as reference implementation
 - **Base Control Demonstration**: HelloWorld now serves as a complete example of how to use standardized components
 - **Best Practices Showcase**: Demonstrates proper usage of Base Editor, Detail View, Empty View, and Ribbon patterns
 - **Developer Reference**: HelloWorld item now acts as the canonical example for workload item development
@@ -52,14 +52,14 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 - **View Patterns**: Consistent Detail View and Empty View patterns for all workload items  
 - **Ribbon System**: Complete ribbon implementation with standardized action patterns
 - **Layout Components**: Proper responsive layouts with Fabric design system integration
-- **Accessibility**: ARIA compliance and keyboard navigation built into all base controls
+- **Accessibility**: ARIA compliance and keyboard navigation built into all base components
 
 ### UI Component Standardization
 
 - Migrated all components to use Fluent UI v9 consistently
 - Standardized button, input, and layout components
 - Improved responsive design patterns
-- Enhanced accessibility compliance across all controls
+- Enhanced accessibility compliance across all components
 
 ### Stylesheet Improvements
 
@@ -85,11 +85,11 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 
 ### AI Development Assistant Enhancements
 
-- **Updated AI Instructions**: Enhanced GitHub Copilot instructions to recommend base controls by default
+- **Updated AI Instructions**: Enhanced GitHub Copilot instructions to recommend base components by default
 - **Base Control Patterns**: AI now suggests using standardized components (Base Editor, Detail View, etc.)
 - **Best Practice Guidance**: Updated AI context to include proper component architecture patterns
-- **Code Generation**: AI assistants now generate code using new standardized controls automatically
-- **Migration Assistance**: Enhanced AI instructions for helping migrate existing components to base controls
+- **Code Generation**: AI assistants now generate code using new standardized components automatically
+- **Migration Assistance**: Enhanced AI instructions for helping migrate existing components to base components
 
 ## 🐛 Bug Fixes
 
@@ -135,7 +135,7 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 
 ### New Documentation
 
-- **Base Controls Usage Guide**: Comprehensive guide for using new standardized components
+- **Base Components Usage Guide**: Comprehensive guide for using new standardized components
 - **Editor Implementation Guide**: How to build editors using Base Editor component  
 - **Ribbon Integration Guide**: Step-by-step ribbon implementation patterns
 - **Detail View Patterns**: Best practices for consistent detail views
@@ -170,18 +170,18 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 
    - Bug fixes were applied automatically to internal code
 
-2. **Adopt New Base Controls** ⭐ **Recommended**
+2. **Adopt New Base Components** ⭐ **Recommended**
    - **Reference Implementation**: Study the updated HelloWorld item as a complete example
    - **Item Editors**: Inherit from the new Base Editor component for consistency
    - **Detail Views**: Use the standardized Detail View component for item details
    - **Empty States**: Implement Empty View component for proper onboarding experience
    - **Ribbons**: Migrate to the new ribbon system for consistent actions
-   - **Navigation**: Use standardized navigation controls and breadcrumbs
+   - **Navigation**: Use standardized navigation components and breadcrumbs
    - **AI Assistance**: Leverage enhanced GitHub Copilot instructions for automatic base control suggestions
 
 3. **Update Component Imports and Styling**
    - Review and update Fluent UI component imports to v9 versions
-   - Replace custom implementations with standardized base controls where applicable
+   - Replace custom implementations with standardized base components where applicable
    - **SCSS Organization**: Create editor-specific `.scss` files (e.g., `MyItemEditor.scss`) for editor customizations
 
 4. **Test Script Execution**
