Fixed PR comments

--- a/docs/ReleaseNotes/2025/v2025.11.md
+++ b/docs/ReleaseNotes/2025/v2025.11.md
@@ -196,4 +196,4 @@ This release introduces significant improvements to the Microsoft Fabric Extensi
 
 ---
 
-For technical support and questions, please refer to the [documentation](../Project_Structure.md) or open an issue in the repository.
+For technical support and questions, please refer to the [documentation](../../Project_Structure.md) or open an issue in the repository.
