fixing several bugs in the Deplyment after moving to the new UX

--- a/docs/ReleaseNotes/2025/v2025.12.md
+++ b/docs/ReleaseNotes/2025/v2025.12.md
@@ -35,6 +35,7 @@ December 2025 release of the Microsoft Fabric Tools Workload, a community collec
 
 ### Configuration Management
 - **Environment Variables**: Better handling of development environment configuration
+- **Removed Pre-configured Environment Files**: Removed default `.env` files to make it easier for customers to create their own environment configurations without conflicts
 - **Manifest Processing**: Improved template processing and validation
 
 ## 📁 Items Status
