fixing some uploading issues in the package installer

--- a/docs/ReleaseNotes/2025/v2025.12.md
+++ b/docs/ReleaseNotes/2025/v2025.12.md
@@ -48,6 +48,9 @@ December 2025 release of the Microsoft Fabric Tools Workload, a community collec
 
 ### PackageInstallerItem
 - ✅ **Reference Implementation**: Serves as the architectural pattern for other items
+- ✅ **UX Guidelines**: Updated UX to follow Fabric design guidelines
+- ✅ **Upload Wizard**: Added new wizard for uploading packages
+- ✅ **Standardized Flows**: Unified workflows for deploying, creating, and uploading packages
 - ✅ **Documentation**: Complete documentation available in `docs/items/PackageInstallerItem/`
 
 ### OneLakeExplorerItem
