--- a/Workload/Manifest/assets/locales/en-US/translations.json
+++ b/Workload/Manifest/assets/locales/en-US/translations.json
@@ -2,11 +2,11 @@
     "Workload_Display_Name": "Fabric Tools",
     "Workload_Full_Display_Name": "Fabric Tools",
     "Workload_Description": "Fabric Tools with standardized ItemEditor controls and playgrounds to get your dev experience started 🚀",
-    "FabricTools_Docs_Title": "Fabric Tools documentation",
-    "FabricTools_Docs_Description": "Fabric Tools documentation description",
-    "FabricTools_Docs_Introduction": "Get started with Fabric Tools",
-    "Workload_Hub_Workload_Slogan": "Tools that make working with Fabric a breeze.",
-    "Workload_Hub_Workload_Description": "Fabric tools enable developers to create and manage Fabric workspaces with ease. It supports various tasks such as package installation, workspace management, and more. Now with standardized ItemEditor controls for consistent UX.",
+    "Workload_Hub_Slogan": "Tools that make working with Fabric a breeze.",
+    "Workload_Hub_Description": "Fabric tools enable developers to create and manage Fabric workspaces with ease. It supports various tasks such as package installation, workspace management, and more. Now with standardized ItemEditor controls for consistent UX.",
+    "Workload_Hub_GetStarted_Docs_Title": "Fabric Tools documentation",
+    "Workload_Hub_GetStarted_Docs_Description": "Fabric Tools documentation description",
+    "Workload_Hub_GetStarted_Docs_Introduction": "Get started with Fabric Tools",
     "PackageInstallerItem_DisplayName": "Package Installer",
     "PackageInstallerItem_DisplayName_Plural": "Package Installers",
     "PackageInstallerItem_Description": "A item that can install different package configurations into Fabric workspaces.",
