--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -21,30 +21,30 @@
     "HelloWorldItemEditor_Definition_Message_Label": "Item Definition",
     "HelloWorldItemEditorEmpty_Message": "Let's say hello to {{itemName}}!",
     "HelloWorldItemEditorEmpty_Button": "Save item",
-    "SparkTerminalItem_EmptyState_Title": "Welcome to Spark Terminal",
-    "SparkTerminalItem_EmptyState_Description": "Execute Spark commands and SQL queries interactively against your lakehouse data.",
-    "SparkTerminalItem_EmptyState_Instructions": "Click 'Start Terminal' to begin your Spark session and start executing commands.",
-    "SparkTerminalItem_StartTerminal": "Start Terminal",
-    "SparkTerminalItem_Settings": "Settings",
-    "SparkTerminalItem_Features_Title": "Features:",
-    "SparkTerminalItem_Connecting": "Connecting...",
-    "SparkTerminalItem_StopSession": "Stop Session",
-    "SparkTerminalItem_SelectLakehouse": "Select Lakehouse",
-    "SparkTerminalItem_History": "History",
-    "SparkTerminalItem_Clear": "Clear",
-    "SparkTerminalItem_Loading": "Loading Spark Terminal...",
-    "SparkTerminalItem_LoadError_Title": "Failed to Load Item",
-    "SparkTerminalItem_LoadError_Message": "Could not load the Spark Terminal item.",
-    "SparkTerminalItem_SaveSuccess_Title": "Saved",
-    "SparkTerminalItem_SaveSuccess_Message": "Spark Terminal configuration saved successfully.",
-    "SparkTerminalItem_SaveError_Title": "Save Failed",
-    "SparkTerminalItem_SaveError_Message": "Could not save the Spark Terminal configuration.",
-    "SparkTerminalItem_LakehouseSelected_Title": "Lakehouse Selected",
-    "SparkTerminalItem_LakehouseSelected_Message": "Connected to lakehouse: {lakehouseName}",
-    "SparkTerminalItem_LakehouseError_Title": "Selection Failed",
-    "SparkTerminalItem_LakehouseError_Message": "Could not select lakehouse.",
-    "SparkTerminalItem_History_Title": "Command History",
-    "SparkTerminalItem_History_Message": "Command history feature coming soon.",
-    "SparkTerminalItem_UnsavedChanges": "Configuration changes will be saved automatically..."
+    "FabricCLIItem_EmptyState_Title": "Welcome to Fabric CLI",
+    "FabricCLIItem_EmptyState_Description": "Execute Spark commands and SQL queries interactively against your lakehouse data.",
+    "FabricCLIItem_EmptyState_Instructions": "Click 'Start Terminal' to begin your Spark session and start executing commands.",
+    "FabricCLIItem_StartTerminal": "Start Terminal",
+    "FabricCLIItem_Settings": "Settings",
+    "FabricCLIItem_Features_Title": "Features:",
+    "FabricCLIItem_Connecting": "Connecting...",
+    "FabricCLIItem_StopSession": "Stop Session",
+    "FabricCLIItem_SelectLakehouse": "Select Lakehouse",
+    "FabricCLIItem_History": "History",
+    "FabricCLIItem_Clear": "Clear",
+    "FabricCLIItem_Loading": "Loading Fabric CLI...",
+    "FabricCLIItem_LoadError_Title": "Failed to Load Item",
+    "FabricCLIItem_LoadError_Message": "Could not load the Fabric CLI item.",
+    "FabricCLIItem_SaveSuccess_Title": "Saved",
+    "FabricCLIItem_SaveSuccess_Message": "Fabric CLI configuration saved successfully.",
+    "FabricCLIItem_SaveError_Title": "Save Failed",
+    "FabricCLIItem_SaveError_Message": "Could not save the Fabric CLI configuration.",
+    "FabricCLIItem_LakehouseSelected_Title": "Lakehouse Selected",
+    "FabricCLIItem_LakehouseSelected_Message": "Connected to lakehouse: {lakehouseName}",
+    "FabricCLIItem_LakehouseError_Title": "Selection Failed",
+    "FabricCLIItem_LakehouseError_Message": "Could not select lakehouse.",
+    "FabricCLIItem_History_Title": "Command History",
+    "FabricCLIItem_History_Message": "Command history feature coming soon.",
+    "FabricCLIItem_UnsavedChanges": "Configuration changes will be saved automatically..."
 }
   
