--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -43,6 +43,15 @@
     "FabricCLIItem_LakehouseSelected_Message": "Connected to lakehouse: {lakehouseName}",
     "FabricCLIItem_LakehouseError_Title": "Selection Failed",
     "FabricCLIItem_LakehouseError_Message": "Could not select lakehouse.",
+    "FabricCLIItem_SelectLakehouse": "Change Lakehouse",
+    "FabricCLIItem_SelectEnvironment": "Select Environment",
+    "FabricCLIItem_EnvironmentSelected_Title": "Environment Selected",
+    "FabricCLIItem_EnvironmentSelected_Message": "Selected environment: {environmentName}",
+    "FabricCLIItem_EnvironmentError_Title": "Selection Failed",
+    "FabricCLIItem_EnvironmentError_Message": "Could not save environment selection.",
+    "FabricCLIItem_StartTerminal": "Start Session",
+    "FabricCLIItem_StopTerminal": "Stop Session",
+    "FabricCLIItem_ClearTerminal": "Clear Terminal",
     "FabricCLIItem_History_Title": "Command History",
     "FabricCLIItem_History_Message": "Command history feature coming soon.",
     "FabricCLIItem_UnsavedChanges": "Configuration changes will be saved automatically..."
