--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -24,12 +24,9 @@
     "FabricCLIItem_EmptyState_Title": "Welcome to Fabric CLI",
     "FabricCLIItem_EmptyState_Description": "Execute Spark commands and SQL queries interactively against your lakehouse data.",
     "FabricCLIItem_EmptyState_Instructions": "Click 'Start Terminal' to begin your Spark session and start executing commands.",
-    "FabricCLIItem_StartTerminal": "Start Terminal",
-    "FabricCLIItem_Settings": "Settings",
     "FabricCLIItem_Features_Title": "Features:",
     "FabricCLIItem_Connecting": "Connecting...",
     "FabricCLIItem_StopSession": "Stop Session",
-    "FabricCLIItem_SelectLakehouse": "Select Lakehouse",
     "FabricCLIItem_History": "History",
     "FabricCLIItem_Clear": "Clear",
     "FabricCLIItem_Loading": "Loading Fabric CLI...",
@@ -40,13 +37,13 @@
     "FabricCLIItem_SaveError_Title": "Save Failed",
     "FabricCLIItem_SaveError_Message": "Could not save the Fabric CLI configuration.",
     "FabricCLIItem_LakehouseSelected_Title": "Lakehouse Selected",
-    "FabricCLIItem_LakehouseSelected_Message": "Connected to lakehouse: {lakehouseName}",
+    "FabricCLIItem_LakehouseSelected_Message": "Connected to lakehouse: {{lakehouseName}}",
     "FabricCLIItem_LakehouseError_Title": "Selection Failed",
     "FabricCLIItem_LakehouseError_Message": "Could not select lakehouse.",
     "FabricCLIItem_SelectLakehouse": "Change Lakehouse",
     "FabricCLIItem_SelectEnvironment": "Select Environment",
     "FabricCLIItem_EnvironmentSelected_Title": "Environment Selected",
-    "FabricCLIItem_EnvironmentSelected_Message": "Selected environment: {environmentName}",
+    "FabricCLIItem_EnvironmentSelected_Message": "Selected environment: {{environmentName}}",
     "FabricCLIItem_EnvironmentError_Title": "Selection Failed",
     "FabricCLIItem_EnvironmentError_Message": "Could not save environment selection.",
     "FabricCLIItem_StartTerminal": "Start Session",
