--- a/Workload/app/assets/locales/en-US/translation.json
+++ b/Workload/app/assets/locales/en-US/translation.json
@@ -36,25 +36,21 @@
     "FabricCLIItem_SaveSuccess_Message": "Fabric CLI configuration saved successfully.",
     "FabricCLIItem_SaveError_Title": "Save Failed",
     "FabricCLIItem_SaveError_Message": "Could not save the Fabric CLI configuration.",
-    "FabricCLIItem_LakehouseSelected_Title": "Lakehouse Selected",
-    "FabricCLIItem_LakehouseSelected_Message": "Connected to lakehouse: {{lakehouseName}}",
-    "FabricCLIItem_LakehouseError_Title": "Selection Failed",
-    "FabricCLIItem_LakehouseError_Message": "Could not select lakehouse.",
-    "FabricCLIItem_SelectLakehouse": "Change Lakehouse",
+    "FabricCLIItem_SelectLakehouse": "Select Lakehouse",
+    "FabricCLIItem_SelectLakehouse_Success": "Connected to lakehouse: {{lakehouseName}}",
+    "FabricCLIItem_SelectLakehouse_Error": "Could not select lakehouse.",
     "FabricCLIItem_SelectEnvironment": "Select Environment",
-    "FabricCLIItem_EnvironmentSelected_Title": "Environment Selected",
-    "FabricCLIItem_EnvironmentSelected_Message": "Selected environment: {{environmentName}}",
-    "FabricCLIItem_EnvironmentError_Title": "Selection Failed",
-    "FabricCLIItem_EnvironmentError_Message": "Could not save environment selection.",
+    "FabricCLIItem_SelectEnvironment_Success": "Selected Spark Environment: {{environmentName}}",
+    "FabricCLIItem_SelectEnvironment_Error": "Could not save environment selection.",
     "FabricCLIItem_StartTerminal": "Start Session",
     "FabricCLIItem_StopTerminal": "Stop Session",
     "FabricCLIItem_ClearTerminal": "Clear Terminal",
     "FabricCLIItem_History_Title": "Command History",
-    "FabricCLIItem_History_Message": "Command history feature coming soon.",
     "FabricCLIItem_ExecutionMode_Native": "Native Python",
     "FabricCLIItem_ExecutionMode_Subprocess": "Subprocess",
     "FabricCLIItem_ExecutionMode_FabCLI": "Fabric CLI",
     "FabricCLIItem_CommandSuccess": "Command executed successfully",
+    "FabricCLIItem_NoEnvironmentSelected": "Please select a Spark environment before starting the session.",
     "FabricCLIItem_UnsavedChanges": "Configuration changes will be saved automatically..."
 }
   
